@@ -83,6 +83,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* implemented unaligned write (for unbuffered I/O)
 	* fixed broadcast_lsd option
 	* fixed udp-socket race condition when using a proxy
 	* end-game mode optimizations
